# smolanalyst

./: .env.example  LICENSE.md  MANIFEST.in  README.md  audit_hooks.py  cli.py  io_management.py  main.py  pyproject.toml  smolanalyst.py
smolanalyst/: Dockerfile  agent.py  audit_hook.py  cli.py  config.py  constants.py  context.py  contexts.py  execution_context.py  filesystem.py  model.py  prompt.py  runner.py  test.py
